# cf-pdf-demo

./: .gitignore  README.md  app.py  delete.py  demo.py  env.example  pyproject.toml  sources.json  vectorization.py
model_hub/: config.py  controller.py
pages/: sources.py  upload.py
utils/: d1.py  database.py  navigation.py  pdf.py  r2_upload.py  vectorization.py  webpage.py  youtube.py
