[tool.poetry]
name = "cf-pdf-demo"
version = "0.1.0"
description = ""
authors = ["Danielle Hon"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pinecone = "^5.1.0"
openai = "^1.45.0"
requests = "^2.32.3"
streamlit = "^1.38.0"
python-dotenv = "^1.0.1"
langchain-pinecone = "^0.2.0"
langchain-huggingface = "^0.1.0"
langchain-text-splitters = "^0.3.0"
groq = "^0.11.0"
tiktoken = "^0.7.0"
google-generativeai = "^0.8.1"
streamlit-authenticator = "^0.3.3"
google-cloud-firestore = "^2.18.0"
google-cloud = "^0.34.0"
firebase-admin = "^6.5.0"
httpx-oauth = "^0.15.1"
st-login-form = "^1.1.0"
pymongo = {extras = ["srv"], version = "^4.9.1"}
contextforce-python = "^0.3.0"
pinecone-text = "^0.9.0"
langchain-community = "^0.3.1"
pyrebase4 = "^4.8.0"
nltk = "^3.9.1"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
